test/good/classes/inheritance10.px

class A def
    Char x: 'A'

class B(A) def
    Char x: 'B'

class C(B) def
    Char x: 'C'

b = B()
print b.x

b = C()
print b.x
