test/bad/classes/super07.px

class A def
    constructor() def
        skip

class B(A) def
    constructor() abstract

class C(B) def
    constructor() def
        super()

C()
